--- a/src/app/components/carga/carga.component.html
+++ b/src/app/components/carga/carga.component.html
@@ -1,7 +1,10 @@
 <div class="row">
     <div class="col-md-4">
         <h3>Seleccione archivos</h3>
-        <div appNgDropFiles class="well drop-zone" [ngClass]="{'file-over': estaSobreElemento}" (mouseSobre)="estaSobreElemento =$event">
+        <div appNgDropFiles class="well drop-zone" 
+            [archivos]="archivos"
+            [ngClass]="{'file-over': estaSobreElemento}" 
+            (mouseSobre)="estaSobreElemento =$event">
             <h4>Deje caer aqui los archivos</h4>
             <img src="assets/img/drop-images.png" alt="">
         </div>
@@ -10,7 +13,7 @@
         <h4>Cargar Archivos</h4>
         <button (click)='cargarImagenes()' class="btn btn-success" [disabled]='archivos.length === 0'>Cargar a
             Firebase</button>
-        <button class="btn btn-danger">Limpiar</button>
+        <button (click)="limpiarArchivo()" class="btn btn-danger">Limpiar</button>
 
         <table class="table">
             <thead class="thead-dark">
@@ -21,12 +24,13 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>zxc</td>
-                    <td>12MG</td>
+                <tr *ngFor="let archivo of archivos"
+                    [ngClass]="{'text-green': archivo.progreso >= 100}">
+                    <td>{{archivo.nombreArchivo}}</td>
+                    <td>{{archivo.archivo.size / 1024 /1024 | number: '.2-2'}} MB</td>
                     <td>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 25%"></div>
+                            <div class="progress-bar" role="progressbar"  [ngStyle]="{ 'width': archivo.progreso + '%'}"></div>
                         </div>
                     </td>
                 </tr>
